--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Lennie Lee Carver">
     <meta name="description" content="All about Lennie Lee Carver and the classes that they have taken.">
+    <meta property="og:title" content="Lennie Lee">
+    <meta property="og:description" content="All about Lennie Lee Carver and the classes that they have taken.">
+    <meta property="og:image" content="../images/lennie.png">
+    <meta property="og:url" content="https://masonleecarver.github.io/wdd231/">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Iceland&family=Roboto:ital,wght@0,100..900;1,100..900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <title>Lennie Lee</title>
+    <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/script.js" defer></script>
