--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <li class="current"><a href="#">Home</a></li>
             <li><a href="#">Chamber Project</a></li>
             <li><a href="#">Final Project</a></li>
+            <li><a href="prophets.html">Prophets</a></li>
         </ul>
     </nav>
     
