--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.svg" alt="logo" width="1px" height="1px">
+        <img src="images/logo.svg" alt="logo" width="1" height="1">
         <h1>Laketown Chamber of Commerce</h1>
         <button id="nav-button" class="hamburger" aria-label="navigation"></button>
         <nav class="navigation">
@@ -42,9 +42,9 @@
             </ul>
         </nav>
     <main>
-        <section class="hero">
+        <div class="hero">
             <img src="images/laketown-sign.webp" alt="hero image" class="hero-img">
-        </section>
+        </div>
 
         <h1>Home</h1>
 
