--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -17,6 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Gravitas+One&family=Ultra&display=swap" rel="stylesheet">
     <script src="scripts/script.js" defer></script>
     <script src="scripts/date.js" defer></script>
+    <script src="scripts/business.js" defer></script>
     <title>Laketown Chamber of Commcerce</title>
 </head>
 <body>
@@ -68,8 +69,13 @@
             </section>
         </div>
 
+        <div class="menu">
+            <button id="grid">Grid</button>
+            <button id="list">List</button>
+        </div>
 
-        <div class="business-cards">
+
+        <div id="businesses" class="grid">
 
 
         </div>
