hopefully fixed it

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Lennie Lee Carver">
     <meta name="description" content="All about what's going down in Laketown, Utah. Garden City's more quiet cousin.">
-    <meta property="og:title" content="Laketown Chamber of Commerce">
+    <meta property="og:title" content="Laketown Chamber of Commerce Directory">
     <meta property="og:description" content="Discover all about what's going down in Laketown, Utah. Garden City's more quiet cousin.">
-    <meta property="og:image" content="images/church.jpeg">
+    <meta property="og:image" content="images/welcome-to-laketown.jpg">
     <meta property="og:url" content="https://masonleecarver.github.io/wdd231/chamber/directory.html">
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
@@ -18,11 +18,11 @@
     <script src="scripts/script.js" defer></script>
     <script src="scripts/date.js" defer></script>
     <script src="scripts/business.js" defer></script>
-    <title>Laketown Chamber of Commcerce</title>
+    <title>Laketown Chamber of Commcerce Directory</title>
 </head>
 <body>
     <header>
-        <img src="images/logo.svg" alt="logo" width="1" height="1">
+        <img src="images/logo.svg" alt="a house with a heart in it" width="1" height="1">
         <h1>Laketown Chamber of Commerce</h1>
         <button id="nav-button" class="hamburger" aria-label="navigation"></button>
         <nav class="navigation">
@@ -44,10 +44,10 @@
         </nav>
     <main>
         <div class="hero">
-            <img src="images/laketown-sign.webp" alt="hero image" class="hero-img">
+            <img src="images/laketown-sign.jpg" alt="welcome to laketown" class="hero-img">
         </div>
 
-        <h1>Home</h1>
+        <h2>Home</h2>
 
         <div class="stuff">
             <section class="card">
@@ -93,9 +93,9 @@
             </p>
                 
         <div class="socials">
-            <a href="https://www.facebook.com/share/g/1A9d23fUs3/"><img src="images/facebook.svg" alt="facebook"></a>
-            <a href="https://www.youtube.com/@bearlakekoa5094"><img src="images/youtube.svg" alt="youtube"></a>
-            <a href="https://www.linkedin.com/in/kara-carver-090ba2211/"><img src="images/linkedin.svg" alt="linkedin"></a>
+            <a href="https://www.facebook.com/share/g/1A9d23fUs3/"><img src="images/facebook.svg" alt="facebook icon"></a>
+            <a href="https://www.youtube.com/@bearlakekoa5094"><img src="images/youtube.svg" alt="youtube icon"></a>
+            <a href="https://www.linkedin.com/in/kara-carver-090ba2211/"><img src="images/linkedin.svg" alt="linkedin icon"></a>
         </div>
     
         <p>
