im begging for mercy

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Lennie Lee Carver">
     <meta name="description" content="All about what's going down in Laketown, Utah. Garden City's more quiet cousin.">
-    <meta property="og:title" content="Laketown Chamber of Commerce Directory">
+    <meta property="og:title" content="Directory">
     <meta property="og:description" content="Discover all about what's going down in Laketown, Utah. Garden City's more quiet cousin.">
-    <meta property="og:image" content="images/welcome-to-laketown.jpg">
+    <meta property="og:image" content="https://github.com/masonleecarver/wdd231/blob/main/chamber/images/welcome-to-laketown.jpg">
     <meta property="og:url" content="https://masonleecarver.github.io/wdd231/chamber/directory.html">
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
@@ -18,7 +18,7 @@
     <script src="scripts/script.js" defer></script>
     <script src="scripts/date.js" defer></script>
     <script src="scripts/business.js" defer></script>
-    <title>Laketown Chamber of Commcerce Directory</title>
+    <title>Directory</title>
 </head>
 <body>
     <header>
