--- a/weather.html
+++ b/weather.html
@@ -15,6 +15,7 @@
         <figcaption></figcaption>
     </figure>
     </main>
+    <!-- call to action -->
     <footer>
         Lennie Lee Carver | OpenWeatherMap.org | CC BY-SA 4.0
     </footer>
