--- a/chamber/index.html
+++ b/chamber/index.html
@@ -66,7 +66,7 @@
                     <p id="wind"></p>
                 </section>
 
-                <section class="card">
+                <section id="forecast" class="card">
                     <h2>Weather Forcast</h2>
                     <p id="tmr-weather"></p>
                     <p id="two-weather"></p>
