--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -43,11 +43,11 @@
             </ul>
         </nav>
     <main>
-        <div class="hero">
+        <!-- <div class="hero">
             <img src="images/laketown-sign.jpg" alt="welcome to laketown" class="hero-img">
-        </div>
+        </div> -->
 
-        <h2 class="normhead">Directory</h2>
+        <h2 class="normhead">Business Directory</h2>
 
         <div class="menu">
             <button id="grid">Grid</button>
