--- a/chamber/index.html
+++ b/chamber/index.html
@@ -67,7 +67,7 @@
                 </section>
 
                 <section id="forecast" class="card">
-                    <h2>Weather Forcast</h2>
+                    <h2>Weather Forecast</h2>
                     <p id="tmr-weather"></p>
                     <p id="two-weather"></p>
                     <p id="three-weather"></p>
