--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav id="nav-bar" class="navigation">
         <ul>
             <li class="current"><a href="#">Home</a></li>
-            <li><a href="chamber/directory.html">Chamber Project</a></li>
+            <li><a href="chamber/index.html">Chamber Project</a></li>
             <li><a href="#">Final Project</a></li>
             <li><a href="prophets.html">Prophets</a></li>
         </ul>
