--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,18 +28,18 @@
         <button id="nav-button" class="hamburger" aria-label="navigation"></button>
         <nav class="navigation">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a class="chosen" href="#">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
-                <li><a href="#">Join</a></li>
+                <li><a href="join.html">Join</a></li>
                 <li><a href="#">Discover</a></li>
             </ul>
         </nav>
     </header>
         <nav class="navigation" id="nav-bar">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a class="chosen" href="#">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
-                <li><a href="#">Join</a></li>
+                <li><a href="join.html">Join</a></li>
                 <li><a href="#">Discover</a></li>
             </ul>
         </nav>
@@ -48,7 +48,7 @@
             <img src="images/laketown-sign.jpg" alt="welcome to laketown" class="hero-img">
         </div>
 
-        <a id="cta" href="#">Join Us!</a>
+        <a id="cta" href="join.html">Join Us!</a>
 
         <h2 class="normhead">Home</h2>
         
