--- a/index.html
+++ b/index.html
@@ -60,13 +60,15 @@
             <button id="all">All Courses</button>
             <button id="wdd">WDD Courses</button>
             <button id="cse">CSE Courses</button>
-            <p><br>The total number of courses listed below is <span id="num-credits">0</span>.<br></p>
+            <p><br>The total number of credits listed below is <span id="num-credits">0</span>.<br></p>
 
             <div id="course-grid">
 
             </div>
 
         </section>
+
+        <dialog id="course-modal"></dialog>
 
     </main>
 
