--- a/chamber/join.html
+++ b/chamber/join.html
@@ -55,7 +55,7 @@
                 <fieldset>
                     <legend>About You!</legend>
 
-                    <label>First Name: <input type="text" id="first" name="first" autocomplete="first-name" required></label>
+                    <label>First Name: <input type="text" id="first" name="first" autocomplete="given-name" required></label>
                     <label>Last Name: <input type="text" id="last" name="last" autocomplete="family-name" required></label>
                     <label>Email: <input type="email" id="email" name="email" autocomplete="email" required></label>
                     <label>Phone: <input type="tel" id="phone" name="phone" autocomplete="tel" required></label>
