--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <ul>
             <li class="current"><a href="#">Home</a></li>
             <li><a href="chamber/index.html">Chamber Project</a></li>
-            <li><a href="#">Final Project</a></li>
+            <li><a href="project/siteplan.html">Final Project</a></li>
             <li><a href="prophets.html">Prophets</a></li>
         </ul>
     </nav>
