--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -18,7 +18,7 @@
     <script src="scripts/script.js" defer></script>
     <script src="scripts/date.js" defer></script>
     <script src="scripts/business.js" defer></script>
-    <title>Directory</title>
+    <title>Directory | Laketown Chamber of Commerce</title>
 </head>
 <body>
     <header>
@@ -30,7 +30,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a class="chosen" href="#">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
             </ul>
         </nav>
     </header>
@@ -39,7 +39,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a class="chosen" href="#">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
             </ul>
         </nav>
     <main>
