--- a/chamber/join.html
+++ b/chamber/join.html
@@ -19,7 +19,7 @@
     <script src="scripts/date.js" defer></script>
     <script src="scripts/timestamp.js" defer></script>
     <script src="scripts/modals.js" defer></script>
-    <title>Join Us</title>
+    <title>Join Us | Laketown Chamber of Commerce</title>
 </head>
 <body>
     <header>
@@ -31,7 +31,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a class="chosen" href="#">Join</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
             </ul>
         </nav>
     </header>
@@ -40,7 +40,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a class="chosen" href="#">Join</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
             </ul>
         </nav>
     <main>
