--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,7 +19,7 @@
     <script src="scripts/date.js" defer></script>
     <script src="scripts/highlight.js" defer></script>
     <script src="scripts/weather.js" defer></script>
-    <title>Home</title>
+    <title>Home | Laketown Chamber of Commerce</title>
 </head>
 <body>
     <header>
@@ -31,7 +31,7 @@
                 <li><a class="chosen" href="#">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
             </ul>
         </nav>
     </header>
@@ -40,7 +40,7 @@
                 <li><a class="chosen" href="#">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
             </ul>
         </nav>
     <main>
