--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Gravitas+One&family=Ultra&display=swap" rel="stylesheet">
     <script src="scripts/script.js" defer></script>
     <script src="scripts/date.js" defer></script>
-    <script src="scripts/discover.mjs" type="module" defer></script>
+    <script src="scripts/discover.mjs" type="module"></script>
     <title>Discover | Laketown Chamber of Commerce</title>
 </head>
 <body>
