--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Home">
     <meta property="og:description" content="Discover all about what's going down in Laketown, Utah. Garden City's more quiet cousin.">
     <meta property="og:image" content="https://masonleecarver.github.io/wdd231/chamber/images/welcome-to-laketown.jpg">
-    <meta property="og:url" content="https://masonleecarver.github.io/wdd231/chamber/directory.html">
+    <meta property="og:url" content="https://masonleecarver.github.io/wdd231/chamber/index.html">
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
