--- a/project/index.html
+++ b/project/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Affordable and adorable commissions">
     <meta property="og:title" content="Home | Lennie's Commissions">
     <meta property="og:description" content="Afforable and adorable commissions">
-    <meta property="og:image" content="https://masonleecarver.github.io/wdd231/project/images/commision/friends.png">
+    <meta property="og:image" content="https://masonleecarver.github.io/wdd231/project/images/mask-lament.webp">
     <meta property="og:url" content="https://masonleecarver.github.io/wdd231/project/index.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,7 @@
         <button id="nav-button" class="hamburger" aria-label="navigation"></button>
         <nav class="navigation">
             <ul>
-                <li><a class="chosen" href="#">Home</a></li>
+                <li><a class="chosen" href="index.html">Home</a></li>
                 <li><a href="order.html">Order</a></li>
                 <li><a href="discover.html">About Me</a></li>
             </ul>
@@ -32,7 +32,7 @@
     </header>
         <nav class="navigation" id="nav-bar">
             <ul>
-                <li><a class="chosen" href="#">Home</a></li>
+                <li><a class="chosen" href="index.html">Home</a></li>
                 <li><a href="order.html">Order</a></li>
                 <li><a href="discover.html">About Me</a></li>
             </ul>
