--- a/project/thankyou.html
+++ b/project/thankyou.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Lennie Lee Carver">
     <meta name="description" content="Affordable and adorable commissions">
-    <meta property="og:title" content="About Me | Lennie's Commissions">
+    <meta property="og:title" content="Order | Lennie's Commissions">
     <meta property="og:description" content="Afforable and adorable commissions">
     <meta property="og:image" content="https://masonleecarver.github.io/wdd231/project/images/mask-lament.webp">
     <meta property="og:url" content="https://masonleecarver.github.io/wdd231/project/index.html">
@@ -14,7 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Mogra&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/script.js" defer></script>
-    <title>About Me | Lennie's Commission Info</title>
+    <script src="scripts/thanks.js" defer></script>
+    <title>THANK YOU! | Lennie's Commission Info</title>
 </head>
 <body>
     <header>
@@ -24,22 +25,29 @@
         <nav class="navigation">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="order.html">Order</a></li>
-                <li><a class="chosen" href="discover.html">About Me</a></li>
+                <li><a class="chosen" href="order.html">Order</a></li>
+                <li><a href="discover.html">About Me</a></li>
             </ul>
         </nav>
     </header>
         <nav class="navigation" id="nav-bar">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="order.html">Order</a></li>
-                <li><a class="chosen" href="discover.html">About Me</a></li>
+                <li><a class="chosen" href="order.html">Order</a></li>
+                <li><a href="discover.html">About Me</a></li>
             </ul>
         </nav>
-    <main>
+
+    <main>    
+
+        <h2 class="normhead">Success!</h2>
+
+        <section id="form-deets"></section>
+
+        <a id="cta" href="index.html">Go Back Home</a>
 
     </main>
-    <footer>
+        <footer>
         <p>
             Lennie's Commissions<br>
             peanutbutter.bread.jam@gmail.com<br>
