--- a/project/discover.html
+++ b/project/discover.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Mogra&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/script.js" defer></script>
     <title>About Me | Lennie's Commission Info</title>
@@ -41,14 +42,14 @@
         <div class="opener">
             <div>
                 <h1>Nice to meet you!</h1>
-                <p>I'm Lennie, a long-time artist, author, composer... four of all trades. Haha!<br><br>I'm so glad that you've stopped by to have a chat with me.</p>
+                <h3>I'm Lennie, a long-time artist, author, composer... four of all trades. Haha!<br><br>I'm so glad that you've stopped by to have a chat with me.</h3>
 
             </div>
-            <img src="images/Commission/Candy_sketch.png">
+            <img src="images/Commission/Candy_sketch.webp">
         </div>
 
-        <img class="hero" src="images/about-me-hero.png" alt="collage of photos and drawings of me" loading="lazy">
-        <p>801-558-1461 | peanutbutter.bread.jam@gmail.com</p>
+        <img class="hero" src="images/about-me-hero.webp" alt="collage of photos and drawings of me" loading="lazy">
+        <h3>801-558-1461 | peanutbutter.bread.jam@gmail.com</h3>
 
         <div class="about-me-page">
 
@@ -56,13 +57,13 @@
             <section class="card">
                 <p>Everywhere I go, there are ideas. Everyone has a character inside them, an artwork that they want to get out. And AI SUCKS at creating art that has any emotion at all… and sometimes people want to see their ideas in an art style that’s expressive and doesn’t murder everything. I aim to work with creatives to help bring their ideas to paper (or my tablet, lol), or just help them see characters in a different art style.  
                 </p>
-                <img src="images/pink-hair.jpg" alt="me with pink hair" loading="lazy">
+                <img src="images/pink-hair.webp" alt="me with pink hair" loading="lazy">
             </section>
 
 
             <h2>My Story</h2>
             <section class="card">
-                <img src="images/bob.jpg" alt="the man that started it all" loading="lazy">
+                <img src="images/bob.webp" alt="the man that started it all" loading="lazy">
                 <p>I started drawing the day I could first hold a pencil. Of course, I wasn’t very good, even though my grandmother told my uncle (a much better artist than I) to “watch out” when I drew my first original character: a big-headed pirate named Bob. In elementary school, I drew for stories that I would write.<br><br>
                     My inspiration continued to grow as I watched cartoons and read more stories, and I learned to draw more “professionally.” I learned to love drawing expressions and poses, to tell a story with art alone.
                 </p>
