--- a/project/index.html
+++ b/project/index.html
@@ -12,9 +12,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Mogra&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/script.js" defer></script>
     <script src="scripts/artwork-script.js" type="module"></script>
+    <script src="scripts/button.js" defer></script>
     <title>Home | Lennie's Commission Info</title>
 </head>
 <body>
@@ -41,7 +43,7 @@
         <div class="main-grid">
             <div class="words">
                 <h1>Status: OPEN!!</h1>
-                <h3 class="interest">Thank you for taking an interest!</h3>
+                <h2 class="interest">Thank you for taking an interest!</h2>
                 <button id="tos-button">TOS</button>
                 <div id="tos">
                     <ul>
@@ -84,7 +86,7 @@
                 </div>
             </div>
             <div id="photos">
-                <h2>The Gallery</h2>
+                <h2>♡ The Gallery ♡</h2>
 
             </div>
         </div>
