--- a/project/discover.html
+++ b/project/discover.html
@@ -45,7 +45,7 @@
                 <h3>I'm Lennie, a long-time artist, author, composer... four of all trades. Haha!<br><br>I'm so glad that you've stopped by to have a chat with me.</h3>
 
             </div>
-            <img src="images/Commission/Candy_sketch.webp">
+            <img src="images/Commission/Candy_sketch.webp" alt="picture of candy." loading="lazy">
         </div>
 
         <img class="hero" src="images/about-me-hero.webp" alt="collage of photos and drawings of me" loading="lazy">
