--- a/project/index.html
+++ b/project/index.html
@@ -48,41 +48,47 @@
                 <div id="tos">
                     <ul>
                         <li>Pay all upfront OR half before I start and half after you get the sketch.</li>
-                        <li>If I feel I can’t draw it, I’ll give you a refund. I’ll let you know before you pay me.</li>
+                        <li><strong>If I feel I can’t draw it, I’ll give you a refund. I’ll let you know before you pay me.</strong></li>
                         <li>I will not draw anything hateful.</li>
-                        <li>My turnaround time is around 1-4 days.</li> 
+                        <li><strong>My turnaround time is around 1-4 days.</strong></li> 
                         <li>I accept payments in Paypal or Venmo.</li>          
                     </ul>
                 </div>
                 <button id="prices-button">Prices</button>
                 <div id="prices">
-                    <ul>
-                        <li><strong>Portraits</strong></li>
+                    <div>
+                        <h3><strong>Portraits</strong></h3>
                         <ul>
                             <li>Sketch: $5</li>
                             <li>Base Color: $10</li>
                             <li>Rendered: $15</li>
                         </ul>
-                        <li><strong>Half Body</strong></li>
+                    </div>
+                    <div>
+                        <h3><strong>Half Body</strong></h3>
                         <ul>
                             <li>Sketch: $7</li>
                             <li>Base Color: $13</li>
                             <li>Rendered: $20</li>
-                        </ul>        
-                        <li><strong>Full Body</strong></li>
+                        </ul>    
+                    </div>
+                    <div>    
+                        <h3><strong>Full Body</strong></h3>
                         <ul>
                             <li>Sketch: $10</li>
                             <li>Base Color: $18</li>
                             <li>Rendered: $25</li>
                         </ul> 
-                        <li><strong>Design a Character</strong></li>
+                    </div>
+                    <div>
+                        <h3><strong>Design a Character</strong></h3>
                         <ul>
                             <li>Sketch: $15</li>
                             <li>Base Color: $25</li>
                             <li>Rendered: $30</li>
                         </ul> 
-                        <li><strong>Additional People: +75%</strong></li>       
-                    </ul>
+                    </div>
+                        <h3><strong>Additional People: +75%</strong></h3>       
                 </div>
             </div>
             <div id="photos">
