--- a/project/order.html
+++ b/project/order.html
@@ -17,10 +17,8 @@
     <script src="scripts/script.js" defer></script>
     <script src="scripts/timestamp.js" defer></script>
     <script src="scripts/modals.js" defer></script>
-    <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-    </script>
-    <script type="text/javascript">
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script>
         (function(){
             emailjs.init({
                 publicKey: "vwNa7T9khdJami_rz",
