--- a/project/order.html
+++ b/project/order.html
@@ -14,8 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Mogra&display=swap" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/normalize.css">
     <script src="scripts/script.js" defer></script>
-    <script src="scripts/timestamp.js" defer></script>
     <script src="scripts/modals.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script>
