--- a/project/index.html
+++ b/project/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Mogra&display=swap" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/normalize.css">
     <script src="scripts/script.js" defer></script>
     <script src="scripts/artwork-script.js" type="module"></script>
     <script src="scripts/button.js" defer></script>
