--- a/project/order.html
+++ b/project/order.html
@@ -173,9 +173,9 @@
             </p>
                 
         <div class="socials">
-            <a href="https://discord.gg/hhJqfSNvmq"><img src="images/discord.svg" alt="discord icon"></a>
-            <a href="https://www.youtube.com/@futzilee"><img src="images/youtube.svg" alt="youtube icon"></a>
-            <a href="https://www.linkedin.com/in/kara-carver-090ba2211/"><img src="images/linkedin.svg" alt="linkedin icon"></a>
+            <a href="https://discord.gg/hhJqfSNvmq" target="_blank"><img src="images/discord.svg" alt="discord icon"></a>
+            <a href="https://youtu.be/6g0OBdHvGLU" target="_blank"><img src="images/youtube.svg" alt="youtube icon"></a>
+            <a href="https://www.linkedin.com/in/kara-carver-090ba2211/" target="_blank"><img src="images/linkedin.svg" alt="linkedin icon"></a>
         </div>
     
         <p>
