--- a/project/discover.html
+++ b/project/discover.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Lennie Lee Carver">
-    <meta name="description" content="Affordable and adorable commissions">
+    <meta name="description" content="Affordable and adorable commissions done by Lennie Lee Carver">
     <meta property="og:title" content="About Me | Lennie's Commissions">
-    <meta property="og:description" content="Afforable and adorable commissions">
+    <meta property="og:description" content="Affordable and adorable commissions done by Lennie Lee Carver">
     <meta property="og:image" content="https://masonleecarver.github.io/wdd231/project/images/mask-lament.webp">
     <meta property="og:url" content="https://masonleecarver.github.io/wdd231/project/index.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -96,3 +96,4 @@
     
     </footer>
 </body>
+</html>
