--- a/project/order.html
+++ b/project/order.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Lennie Lee Carver">
-    <meta name="description" content="Affordable and adorable commissions">
+    <meta name="description" content="Affordable and adorable commissions done by Lennie Lee Carver">
     <meta property="og:title" content="Order | Lennie's Commissions">
-    <meta property="og:description" content="Afforable and adorable commissions">
+    <meta property="og:description" content="Affordable and adorable commissions done by Lennie Lee Carver">
     <meta property="og:image" content="https://masonleecarver.github.io/wdd231/project/images/mask-lament.webp">
     <meta property="og:url" content="https://masonleecarver.github.io/wdd231/project/index.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,17 +18,6 @@
     <script src="scripts/script.js" defer></script>
     <script src="scripts/modals.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script>
-        (function(){
-            emailjs.init({
-                publicKey: "vwNa7T9khdJami_rz",
-                limitRate: {
-                    id: 'app',
-                    throttle: 10000,
-                },
-            });
-        })();
-    </script>
     <script src="scripts/send-emails.js" defer></script>
     <title>Order | Lennie's Commission Info</title>
 </head>
@@ -186,3 +175,4 @@
     
     </footer>
 </body>
+</html>
