less ugly modals

--- a/project/discover.html
+++ b/project/discover.html
@@ -21,7 +21,7 @@
 <body>
     <header>
     <img src="images/logo.svg" alt="a pallette" width="1" height="1">
-        <h1>Lennie's Commisions</h1>
+        <h1>Lennie's Gallery</h1>
         <button id="nav-button" class="hamburger" aria-label="navigation"></button>
         <nav class="navigation">
             <ul>
