--- a/project/index.html
+++ b/project/index.html
@@ -18,12 +18,12 @@
     <script src="scripts/script.js" defer></script>
     <script src="scripts/artwork-script.js" type="module"></script>
     <script src="scripts/button.js" defer></script>
-    <title>Home | Lennie's Commission Info</title>
+    <title>Home | Lennie's Gallery</title>
 </head>
 <body>
     <header>
     <img src="images/logo.svg" alt="a pallette" width="1" height="1">
-        <h1>Lennie's Commisions</h1>
+        <h1>Lennie's Gallery</h1>
         <button id="nav-button" class="hamburger" aria-label="navigation"></button>
         <nav class="navigation">
             <ul>
@@ -43,7 +43,7 @@
     <main>
         <div class="main-grid">
             <div class="words">
-                <h1>Status: OPEN!!</h1>
+                <h1>Commission Status: OPEN!!</h1>
                 <h2 class="interest">Thank you for taking an interest!</h2>
                 <button id="tos-button">TOS</button>
                 <div id="tos">
